update: add favicon to app

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     />
     <meta name="theme-color" content="#000000" />
     <title>Dog Book</title>
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico?v=2"> 
   </head>
 
   <body style="margin: 0; height: 100%;">
